tests/neg/phantom-trait-5.scala
trait Foo {
  self: Phantom => // error
}
